hphp/test/slow/reified-generics/new-static.php.expectf
Fatal error: Cannot call new static since class%?{ D} has reified generics in %s on line 8
